[package]
name = "json-compare"
version = "0.0.1"
authors = ["Marvin Davieds <marvin.davieds@gmail.com>","Vince <c0d3x42@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
